[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/scripts/level.gd" type="Script" id=1]
[ext_resource path="res://assets/TileSets/Blocks.tres" type="TileSet" id=2]
[ext_resource path="res://assets/TileSets/Floor.tres" type="TileSet" id=3]
[ext_resource path="res://assets/scenes/cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenes/debug.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/scenes/zombie.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scripts/path.gd" type="Script" id=7]
[ext_resource path="res://assets/scenes/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/scenes/purchasable_weapons.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sprites/tiles/walls_tileset_1.png" type="Texture" id=10]
[ext_resource path="res://assets/scenes/purchasable_perks.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/scenes/Interface.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/UI/OptionsMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/UI/PauseMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/sprites/football_goal_PNG21.png" type="Texture" id=15]
[ext_resource path="res://assets/scenes/puck_a_panch.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/scenes/spawnpoint.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/scenes/mystery_box.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/scenes/zombieFast.tscn" type="PackedScene" id=19]

[sub_resource type="TileSet" id=1]
0/name = "walls_tileset_1.png 0"
0/texture = ExtResource( 10 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "walls_tileset_1.png 1"
1/texture = ExtResource( 10 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 256, 256 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16 ]
1/autotile/icon_coordinate = Vector2( 3, 3 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 14 )]

[node name="Walls" type="TileMap" parent="."]
z_index = -25
tile_set = SubResource( 1 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524314, 0, 0, -524313, 0, 0, -524312, 0, 0, -524311, 0, 0, -524310, 0, 0, -524309, 0, 0, -524308, 0, 0, -524307, 0, 0, -524306, 0, 0, -524305, 0, 0, -524304, 0, 0, -524303, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 0, 0, -524299, 0, 0, -524298, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -458778, 0, 0, -458777, 0, 0, -458776, 0, 0, -458775, 0, 0, -458774, 0, 0, -458773, 0, 0, -458772, 0, 0, -458771, 0, 0, -458770, 0, 0, -458769, 0, 0, -458768, 0, 0, -458767, 0, 0, -458766, 0, 0, -458765, 0, 0, -458764, 0, 0, -458763, 0, 0, -458762, 0, 0, -458761, 0, 0, -458760, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -393242, 0, 0, -393241, 0, 0, -393240, 0, 0, -393239, 0, 0, -393238, 0, 0, -393237, 0, 0, -393236, 0, 0, -393235, 0, 0, -393234, 0, 0, -393233, 0, 0, -393232, 0, 0, -393231, 0, 0, -393230, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -327706, 0, 0, -327705, 0, 0, -327704, 0, 0, -327703, 0, 0, -327702, 0, 0, -327701, 0, 0, -327700, 0, 0, -327699, 0, 0, -327698, 0, 0, -327697, 0, 0, -327696, 0, 0, -327695, 0, 0, -327694, 0, 0, -327693, 0, 0, -327692, 0, 0, -327691, 0, 0, -327690, 0, 0, -327689, 0, 0, -327688, 0, 0, -327687, 0, 0, -327686, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -262170, 0, 0, -262169, 0, 0, -262168, 0, 0, -262167, 0, 0, -262166, 0, 0, -262165, 0, 0, -262164, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -196634, 0, 0, -196633, 0, 0, -196632, 0, 0, -196631, 0, 0, -196630, 0, 0, -196629, 0, 0, -196628, 0, 0, -196627, 0, 0, -196626, 0, 0, -196625, 0, 0, -196624, 0, 0, -196623, 0, 0, -196622, 0, 0, -196621, 0, 0, -196620, 0, 0, -196619, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -131098, 0, 0, -131097, 0, 0, -131096, 0, 0, -131095, 0, 0, -131094, 0, 0, -131093, 0, 0, -131092, 0, 0, -131091, 0, 0, -131090, 0, 0, -131089, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 0, 0, -131084, 0, 0, -131083, 0, 0, -131082, 0, 0, -131081, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -65562, 0, 0, -65561, 0, 0, -65560, 0, 0, -65559, 0, 0, -65558, 0, 0, -65557, 0, 0, -65556, 0, 0, -65555, 0, 0, -65554, 0, 0, -65553, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0 )

[node name="Blocks" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -720925, 0, 0, -589808, 0, 0, -524272, 0, 0, -458736, 0, 0, -393200, 0, 0, -196583, 0, 0, -131047, 0, 0, -26, 0, 0, -25, 0, 0, -24, 0, 0, -23, 0, 0, -22, 0, 0, -21, 0, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 32
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589817, 0, 0, -589816, 0, 0, -458748, 0, 0, -458743, 0, 0, -458742, 0, 0, -327673, 0, 0, -327672, 0, 0, -131095, 0, 0, -131094, 0, 0, -131088, 0, 0, -131087, 0, 0, -131080, 0, 0, -131079, 0, 0, -196603, 0, 0, -196602, 0, 0, -196599, 0, 0, -196598, 0, 0, -65529, 0, 0, -65528, 0, 0 )

[node name="Pathfinder" type="Node2D" parent="."]
visible = false
script = ExtResource( 7 )

[node name="DebugOverlay" parent="." instance=ExtResource( 5 )]

[node name="Zombie" parent="." instance=ExtResource( 6 )]
position = Vector2( -1625.31, -176.878 )

[node name="Weapons" type="Node" parent="."]

[node name="purchasable_weapons" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -665.555, -392 )
Selected_Weapon = 0

[node name="purchasable_weapons2" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -168, -318.191 )
Selected_Weapon = 1

[node name="purchasable_weapons3" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -296, -184 )
Selected_Weapon = 11

[node name="purchasable_weapons4" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -712, -142.191 )
Selected_Weapon = 3

[node name="purchasable_weapons5" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -888, -144 )
Selected_Weapon = 4

[node name="purchasable_weapons6" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -496, -142.191 )
Selected_Weapon = 5

[node name="purchasable_weapons7" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -1104, -144 )
Selected_Weapon = 6

[node name="purchasable_weapons8" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -1288, -150.191 )
Selected_Weapon = 7

[node name="purchasable_weapons9" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -1464, -145.933 )
Selected_Weapon = 8

[node name="purchasable_weapons10" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -952, -376 )
Selected_Weapon = 9

[node name="purchasable_weapons11" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -1392, -352 )
Selected_Weapon = 10

[node name="purchasable_weapons12" parent="Weapons" instance=ExtResource( 9 )]
position = Vector2( -440, -360 )
Selected_Weapon = 12

[node name="Mystery box" type="Node" parent="."]

[node name="Mystery_Box" parent="Mystery box" instance=ExtResource( 18 )]
position = Vector2( 486, -178 )

[node name="puck a panch" type="Node" parent="."]

[node name="puck_a_panch" parent="puck a panch" instance=ExtResource( 16 )]
position = Vector2( 776, -170.686 )

[node name="Perks" type="Node" parent="."]

[node name="MovementPerk" parent="Perks" instance=ExtResource( 11 )]
position = Vector2( -958.016, -257.887 )
Selected_Perk = 1

[node name="FasterShootingPerk" parent="Perks" instance=ExtResource( 11 )]
position = Vector2( 88, -234.8 )
Selected_Perk = 3

[node name="HealthPerk" parent="Perks" instance=ExtResource( 11 )]
position = Vector2( -88, -513.442 )

[node name="AmmoPerk" parent="Perks" instance=ExtResource( 11 )]
position = Vector2( -1403.34, -250.8 )
Selected_Perk = 2

[node name="CanvasLayer" parent="." instance=ExtResource( 12 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Optionsmenu" parent="." instance=ExtResource( 13 )]

[node name="Options" parent="Optionsmenu" index="0"]
visible = false

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( -178.074, -151.993 )

[node name="cursor" parent="." instance=ExtResource( 4 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 947.312, -410.967 )
texture = ExtResource( 15 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -1201.43, -125.017 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )
flip_h = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Spawnpoints" type="Node" parent="."]

[node name="enemyspawnpoint15" parent="Spawnpoints" instance=ExtResource( 17 )]
position = Vector2( 3869.75, -1892.49 )

[node name="enemyspawnpoint11" parent="Spawnpoints" instance=ExtResource( 17 )]
position = Vector2( 3293.75, -1380.49 )

[node name="enemyspawnpoint7" parent="Spawnpoints" instance=ExtResource( 17 )]
position = Vector2( 3040, -1312 )

[node name="Zombie2" parent="." instance=ExtResource( 19 )]
position = Vector2( 193.164, -122.787 )

[node name="Zombie3" parent="." instance=ExtResource( 19 )]
position = Vector2( 124.694, -120.542 )

[node name="Zombie4" parent="." instance=ExtResource( 19 )]
position = Vector2( 285.206, -126.154 )

[node name="Zombie5" parent="." instance=ExtResource( 19 )]
position = Vector2( 59.5911, -127.277 )

[node name="Zombie6" parent="." instance=ExtResource( 19 )]
position = Vector2( -5.51166, -127.277 )

[connection signal="button_down" from="PauseMenu/Container/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="PauseMenu/Container/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="PauseMenu/Container/ExitMenu" to="." method="_on_ExitMenu_button_down"]
[connection signal="ammopouchSpawn" from="Pathfinder" to="." method="_on_Pathfinder_ammopouchSpawn"]
[connection signal="perkactiveMovement" from="Perks/MovementPerk" to="Player" method="_on_MovementPerk_perkactiveMovement"]
[connection signal="perkactive" from="Perks/FasterShootingPerk" to="Player/body/chest/torso/gun" method="_on_FasterShootingPerk_perkactive"]
[connection signal="perkactiveAmmo" from="Perks/AmmoPerk" to="Player/body/chest/torso/gun" method="_on_AmmoPerk_perkactiveAmmo"]
[connection signal="button_down" from="Optionsmenu/Options/Panel/VBox/ExitOptions" to="." method="_on_ExitOptions_button_down"]
[connection signal="ammoUpdate" from="Player" to="CanvasLayer/Interface/Ammo/AmmoLabel" method="_on_Player_ammoUpdate"]
[connection signal="ammoUpdate" from="Player" to="CanvasLayer/Interface/Ammo/TotalAmmoLabel" method="_on_Player_ammoUpdate"]
[connection signal="health_updated" from="Player" to="CanvasLayer/Interface/HPbar" method="_on_Player_health_updated"]
[connection signal="play_sound" from="Player/body/chest/torso/gun" to="Player/body/chest/torso/gun/BulletPoint/sfx" method="play_sound"]
[connection signal="play_sound_with_pitch" from="Player/body/chest/torso/gun" to="Player/body/chest/torso/gun/BulletPoint/sfx" method="play_sound_with_pitch"]
[connection signal="set_camera_decay" from="Player/body/chest/torso/gun" to="Player/Pivot/CameraOffset/Camera2D" method="set_camera_decay"]
[connection signal="set_gun_recoil_sensitivity" from="Player/body/chest/torso/gun" to="Player" method="set_gun_recoil_sensitivity"]

[editable path="PauseMenu"]
[editable path="PauseMenu/Container/Continue"]
[editable path="PauseMenu/Container/Options"]
[editable path="PauseMenu/Container/ExitMenu"]
[editable path="CanvasLayer"]
[editable path="Optionsmenu"]
[editable path="Player"]
